backend/src/main/java/com/heroesoftimepoc/temporalengine/parser/HeroesOfTimeScriptParser.java
// Generated from com/heroesoftimepoc/temporalengine/parser/HeroesOfTimeScript.g4 by ANTLR 4.13.1
package com.heroesoftimepoc.temporalengine.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class HeroesOfTimeScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, PSI_ID=38, 
		DAGGER=39, ODOT=40, PI=41, ARROW=42, TIMELINE_ID=43, SIGN=44, NUMBER=45, 
		IDENTIFIER=46, STRING=47, LPAREN=48, RPAREN=49, COMMA=50, COLON=51, AT=52, 
		WS=53, COMMENT=54, BLOCK_COMMENT=55, ERROR_CHAR=56;
	public static final int
		RULE_script = 0, RULE_temporalScript = 1, RULE_psiState = 2, RULE_observation = 3, 
		RULE_temporalExpression = 4, RULE_collapseCommand = 5, RULE_observationTrigger = 6, 
		RULE_condition = 7, RULE_customCondition = 8, RULE_basicScript = 9, RULE_heroCommand = 10, 
		RULE_movementCommand = 11, RULE_createCommand = 12, RULE_createType = 13, 
		RULE_useCommand = 14, RULE_useType = 15, RULE_target = 16, RULE_battleCommand = 17, 
		RULE_combatant = 18, RULE_hmm3Command = 19, RULE_buildCommand = 20, RULE_recruitCommand = 21, 
		RULE_castCommand = 22, RULE_collectCommand = 23, RULE_learnCommand = 24, 
		RULE_levelUpCommand = 25, RULE_exploreCommand = 26, RULE_equipCommand = 27, 
		RULE_siegeCommand = 28, RULE_captureCommand = 29, RULE_timelineScript = 30, 
		RULE_timelineCommand = 31, RULE_mergeCommand = 32, RULE_timeline = 33, 
		RULE_action = 34, RULE_complexAction = 35, RULE_argumentList = 36, RULE_argument = 37, 
		RULE_position = 38, RULE_deltaTime = 39;
	private static String[] makeRuleNames() {
		return new String[] {
			"script", "temporalScript", "psiState", "observation", "temporalExpression", 
			"collapseCommand", "observationTrigger", "condition", "customCondition", 
			"basicScript", "heroCommand", "movementCommand", "createCommand", "createType", 
			"useCommand", "useType", "target", "battleCommand", "combatant", "hmm3Command", 
			"buildCommand", "recruitCommand", "castCommand", "collectCommand", "learnCommand", 
			"levelUpCommand", "exploreCommand", "equipCommand", "siegeCommand", "captureCommand", 
			"timelineScript", "timelineCommand", "mergeCommand", "timeline", "action", 
			"complexAction", "argumentList", "argument", "position", "deltaTime"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'enters'", "'at'", "'spawns'", "'destroyed'", "'uses'", "'HERO'", 
			"'MOV'", "'CREATE'", "'CREATURE'", "'ITEM'", "'STRUCTURE'", "'BUILDING'", 
			"'USE'", "'SPELL'", "'ABILITY'", "'HERO:'", "'TARGET:'", "'BATTLE'", 
			"'BUILD'", "'PLAYER:'", "'RECRUIT'", "'UNIT'", "'CAST'", "'COLLECT'", 
			"'RESOURCE'", "'LEARN'", "'LEVELUP'", "'SKILL:'", "'EXPLORE'", "'EQUIP'", 
			"'ARTIFACT'", "'SIEGE'", "'CAPTURE'", "'OBJECTIVE'", "'TIMELINE'", "'MERGE'", 
			"'\\u0394t'", null, "'\\u2020'", "'\\u2299'", "'\\u03A0'", null, null, 
			null, null, null, null, "'('", "')'", "','", "':'", "'@'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "PSI_ID", "DAGGER", "ODOT", "PI", "ARROW", "TIMELINE_ID", 
			"SIGN", "NUMBER", "IDENTIFIER", "STRING", "LPAREN", "RPAREN", "COMMA", 
			"COLON", "AT", "WS", "COMMENT", "BLOCK_COMMENT", "ERROR_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HeroesOfTimeScript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HeroesOfTimeScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScriptContext extends ParserRuleContext {
		public TemporalScriptContext temporalScript() {
			return getRuleContext(TemporalScriptContext.class,0);
		}
		public BasicScriptContext basicScript() {
			return getRuleContext(BasicScriptContext.class,0);
		}
		public TimelineScriptContext timelineScript() {
			return getRuleContext(TimelineScriptContext.class,0);
		}
		public TerminalNode EOF() { return getToken(HeroesOfTimeScriptParser.EOF, 0); }
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HeroesOfTimeScriptListener ) ((HeroesOfTimeScriptListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HeroesOfTimeScriptListener ) ((HeroesOfTimeScriptListener)listener).exitScript(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HeroesOfTimeScriptVisitor ) return ((HeroesOfTimeScriptVisitor<? extends T>)visitor).visitScript(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		try {
			setState(84);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PSI_ID:
			case DAGGER:
			case PI:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				temporalScript();
				}
				break;
			case T__5:
			case T__6:
			case T__7:
			case T__12:
			case T__17:
			case T__18:
			case T__20:
			case T__22:
			case T__23:
			case T__25:
			case T__26:
			case T__28:
			case T__29:
			case T__31:
			case T__32:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				basicScript();
				}
				break;
			case T__34:
			case T__35:
				enterOuterAlt(_localctx, 3);
				{
				setState(82);
				timelineScript();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 4);
				{
				setState(83);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TemporalScriptContext extends ParserRuleContext {
		public PsiStateContext psiState() {
			return getRuleContext(PsiStateContext.class,0);
		}
		public CollapseCommandContext collapseCommand() {
			return getRuleContext(CollapseCommandContext.class,0);
		}
		public ObservationTriggerContext observationTrigger() {
			return getRuleContext(ObservationTriggerContext.class,0);
		}
		public TemporalScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_temporalScript; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HeroesOfTimeScriptListener ) ((HeroesOfTimeScriptListener)listener).enterTemporalScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HeroesOfTimeScriptListener ) ((HeroesOfTimeScriptListener)listener).exitTemporalScript(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HeroesOfTimeScriptVisitor ) return ((HeroesOfTimeScriptVisitor<? extends T>)visitor).visitTemporalScript(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TemporalScriptContext temporalScript() throws RecognitionException {
		TemporalScriptContext _localctx = new TemporalScriptContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_temporalScript);
		try {
			setState(89);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PSI_ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				psiState();
				}
				break;
			case DAGGER:
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				collapseCommand();
				}
				break;
			case PI:
				enterOuterAlt(_localctx, 3);
				{
				setState(88);
				observationTrigger();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PsiStateContext extends ParserRuleContext {
		public TerminalNode PSI_ID() { return getToken(HeroesOfTimeScriptParser.PSI_ID, 0); }
		public TerminalNode COLON() { return getToken(HeroesOfTimeScriptParser.COLON, 0); }
		public ObservationContext observation() {
			return getRuleContext(ObservationContext.class,0);
		}
		public TimelineContext timeline() {
			return getRuleContext(TimelineContext.class,0);
		}
		public PsiStateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_psiState; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HeroesOfTimeScriptListener ) ((HeroesOfTimeScriptListener)listener).enterPsiState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HeroesOfTimeScriptListener ) ((HeroesOfTimeScriptListener)listener).exitPsiState(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HeroesOfTimeScriptVisitor ) return ((HeroesOfTimeScriptVisitor<? extends T>)visitor).visitPsiState(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PsiStateContext psiState() throws RecognitionException {
		PsiStateContext _localctx = new PsiStateContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_psiState);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(PSI_ID);
			setState(92);
			match(COLON);
			setState(93);
			observation();
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TIMELINE_ID) {
				{
				setState(94);
				timeline();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ObservationContext extends ParserRuleContext {
		public TerminalNode ODOT() { return getToken(HeroesOfTimeScriptParser.ODOT, 0); }
		public TerminalNode LPAREN() { return getToken(HeroesOfTimeScriptParser.LPAREN, 0); }
		public TemporalExpressionContext temporalExpression() {
			return getRuleContext(TemporalExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(HeroesOfTimeScriptParser.RPAREN, 0); }
		public ObservationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_observation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HeroesOfTimeScriptListener ) ((HeroesOfTimeScriptListener)listener).enterObservation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HeroesOfTimeScriptListener ) ((HeroesOfTimeScriptListener)listener).exitObservation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HeroesOfTimeScriptVisitor ) return ((HeroesOfTimeScriptVisitor<? extends T>)visitor).visitObservation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObservationContext observation() throws RecognitionException {
		ObservationContext _localctx = new ObservationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_observation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(ODOT);
			setState(98);
			match(LPAREN);
			setState(99);
			temporalExpression();
			setState(100);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TemporalExpressionContext extends ParserRuleContext {
		public DeltaTimeContext deltaTime() {
			return getRuleContext(DeltaTimeContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(HeroesOfTimeScriptParser.ARROW, 0); }
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public PositionContext position() {
			return getRuleContext(PositionContext.class,0);
		}
		public TemporalExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_temporalExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HeroesOfTimeScriptListener ) ((HeroesOfTimeScriptListener)listener).enterTemporalExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HeroesOfTimeScriptListener ) ((HeroesOfTimeScriptListener)listener).exitTemporalExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HeroesOfTimeScriptVisitor ) return ((HeroesOfTimeScriptVisitor<? extends T>)visitor).visitTemporalExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TemporalExpressionContext temporalExpression() throws RecognitionException {
		TemporalExpressionContext _localctx = new TemporalExpressionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_temporalExpression);
		int _la;
		try {
			setState(118);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				deltaTime();
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==AT) {
					{
					setState(103);
					position();
					}
				}

				setState(106);
				match(ARROW);
				setState(107);
				action();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				deltaTime();
				setState(110);
				match(ARROW);
				setState(111);
				action();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				position();
				setState(114);
				match(ARROW);
				setState(115);
				action();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(117);
				action();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CollapseCommandContext extends ParserRuleContext {
		public TerminalNode DAGGER() { return getToken(HeroesOfTimeScriptParser.DAGGER, 0); }
		public TerminalNode PSI_ID() { return getToken(HeroesOfTimeScriptParser.PSI_ID, 0); }
		public CollapseCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_collapseCommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HeroesOfTimeScriptListener ) ((HeroesOfTimeScriptListener)listener).enterCollapseCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HeroesOfTimeScriptListener ) ((HeroesOfTimeScriptListener)listener).exitCollapseCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HeroesOfTimeScriptVisitor ) return ((HeroesOfTimeScriptVisitor<? extends T>)visitor).visitCollapseCommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CollapseCommandContext collapseCommand() throws RecognitionException {
		CollapseCommandContext _localctx = new CollapseCommandContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_collapseCommand);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(DAGGER);
			setState(121);
			match(PSI_ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ObservationTriggerContext extends ParserRuleContext {
		public TerminalNode PI() { return getToken(HeroesOfTimeScriptParser.PI, 0); }
		public TerminalNode LPAREN() { return getToken(HeroesOfTimeScriptParser.LPAREN, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(HeroesOfTimeScriptParser.RPAREN, 0); }
		public TerminalNode ARROW() { return getToken(HeroesOfTimeScriptParser.ARROW, 0); }
		public TerminalNode DAGGER() { return getToken(HeroesOfTimeScriptParser.DAGGER, 0); }
		public TerminalNode PSI_ID() { return getToken(HeroesOfTimeScriptParser.PSI_ID, 0); }
		public ObservationTriggerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_observationTrigger; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HeroesOfTimeScriptListener ) ((HeroesOfTimeScriptListener)listener).enterObservationTrigger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HeroesOfTimeScriptListener ) ((HeroesOfTimeScriptListener)listener).exitObservationTrigger(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HeroesOfTimeScriptVisitor ) return ((HeroesOfTimeScriptVisitor<? extends T>)visitor).visitObservationTrigger(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObservationTriggerContext observationTrigger() throws RecognitionException {
		ObservationTriggerContext _localctx = new ObservationTriggerContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_observationTrigger);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(PI);
			setState(124);
			match(LPAREN);
			setState(125);
			condition();
			setState(126);
			match(RPAREN);
			setState(127);
			match(ARROW);
			setState(128);
			match(DAGGER);
			setState(129);
			match(PSI_ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConditionContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(HeroesOfTimeScriptParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(HeroesOfTimeScriptParser.IDENTIFIER, i);
		}
		public PositionContext position() {
			return getRuleContext(PositionContext.class,0);
		}
		public DeltaTimeContext deltaTime() {
			return getRuleContext(DeltaTimeContext.class,0);
		}
		public CustomConditionContext customCondition() {
			return getRuleContext(CustomConditionContext.class,0);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HeroesOfTimeScriptListener ) ((HeroesOfTimeScriptListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HeroesOfTimeScriptListener ) ((HeroesOfTimeScriptListener)listener).exitCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HeroesOfTimeScriptVisitor ) return ((HeroesOfTimeScriptVisitor<? extends T>)visitor).visitCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_condition);
		int _la;
		try {
			setState(147);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(131);
				match(IDENTIFIER);
				setState(132);
				match(T__0);
				setState(133);
				position();
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__1) {
					{
					setState(134);
					match(T__1);
					setState(135);
					deltaTime();
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				match(IDENTIFIER);
				setState(139);
				match(T__2);
				setState(140);
				position();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(141);
				match(IDENTIFIER);
				setState(142);
				match(T__3);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(143);
				match(IDENTIFIER);
				setState(144);
				match(T__4);
				setState(145);
				match(IDENTIFIER);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(146);
				customCondition();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
